--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,12 @@ services:
     ports:
       - "8000:8000"
     depends_on:
+      - migration
+      - db
+  migration:
+    image: uzman
+    command: python manage.py migrate --noinput
+    volumes:
+      - .:/code
+    depends_on:
       - db
