Changed docker image from uzman to postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - migration
       - db
   migration:
-    image: uzman
+    image: postgres
     command: python manage.py migrate --noinput
     volumes:
       - .:/code
